--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.13.2",
+    "firebase": "^10.14.1",
+    "gsap": "^3.12.5",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
