--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "next": "^14.2.13",
     "react": "^18.3.1",
