--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@types/react": "19.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
