--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
